# snag_report_extractor_app

./: .gitignore  README.md  ffigen.yaml  generate_bindings.sh  inno_setup.iss  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
clib/: CMakeLists.txt  mupdf_wrapper.c  mupdf_wrapper.h  mupdf_wrapper_test.c
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: app.dart  shared_preference_provider.dart  theme_mode_provider.dart
lib/src/common_widgets/: bi_directional_text_field.dart  empty_placeholder_widget.dart  primary_button.dart
lib/src/features/pdf_extractor/data/: directory_manager.dart  mupdf_ffi.g.dart  mupdf_repository.dart  mupdf_repository_ffi.dart  pdf_worker.dart
lib/src/features/pdf_extractor/domain/: mupdf.dart
lib/src/features/pdf_extractor/presentation/: pdf_extractor_controller.dart  (+3 more)
lib/src/localization/: string_hardcoded.dart
lib/src/logging/: talker_success.dart
lib/src/routing/: app_routing.dart  not_found_screen.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plugins/directory_bookmarks/: pubspec.yaml
plugins/directory_bookmarks/lib/src/: directory_bookmark_handler.dart
plugins/directory_bookmarks/macos/: directory_bookmarks.podspec
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
